# observability-monorepo

./: .gitignore  .npmrc  BUILD_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LOCAL_PUBLISHING.md  README.md  SECURITY.md  build-all.sh  build-dotnet.sh  build-node.sh  build-python.sh  package-lock.json  package.json  publish-local.sh  publish-setup.sh  test-cli.mjs  verify-completion.sh
.github/workflows/: dotnet-ci.yml  node-ci.yml  publish.yml  python-ci.yml  quality.yml
examples/: README.md
examples/dotnet-aspnet-service/: ExampleService.csproj  Program.cs  README.md
examples/node-express-service/: README.md  package-lock.json  package.json  tsconfig.json
examples/node-express-service/src/: index.ts
examples/python-django-service/: README.md  manage.py  pyproject.toml
examples/python-django-service/api/: apps.py  views.py
examples/python-django-service/config/: settings.py  urls.py  wsgi.py
